--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -3,7 +3,8 @@
  */
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
-dl, dd, ol, ul, figure {
+dl, dd, ol, ul, figure 
+{
     margin: 0;
     padding: 0;
 }
@@ -13,7 +14,8 @@ dl, dd, ol, ul, figure {
 /**
  * Basic styling
  */
-body {
+body 
+{
     font-family: $base-font-family;
     font-size: $base-font-size;
     line-height: $base-line-height;
@@ -31,7 +33,8 @@ body {
 h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
-%vertical-rhythm {
+%vertical-rhythm 
+{
     margin-bottom: $spacing-unit / 2;
 }
 
@@ -40,7 +43,8 @@ ul, ol, dl, figure,
 /**
  * Images
  */
-img {
+img 
+{
     max-width: 100%;
     vertical-align: middle;
 }
@@ -50,11 +54,13 @@ img {
 /**
  * Figures
  */
-figure > img {
+figure > img 
+{
     display: block;
 }
 
-figcaption {
+figcaption 
+{
     font-size: $small-font-size;
 }
 
@@ -63,13 +69,16 @@ figcaption {
 /**
  * Lists
  */
-ul, ol {
+ul, ol 
+{
     margin-left: $spacing-unit;
 }
 
-li {
+li 
+{
     > ul,
-    > ol {
+    > ol 
+    {
          margin-bottom: 0;
     }
 }
@@ -79,7 +88,8 @@ li {
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 
+{
     font-weight: 300;
 }
 
@@ -88,15 +98,18 @@ h1, h2, h3, h4, h5, h6 {
 /**
  * Links
  */
-a {
+a 
+{
     color: $brand-color;
     text-decoration: none;
-
-    &:visited {
+    
+    &:visited 
+    {
         color: darken($brand-color, 15%);
     }
-
-    &:hover {
+    
+    &:hover 
+    {
         color: $text-color;
         text-decoration: underline;
     }
@@ -105,17 +118,27 @@ a {
 
 
 /**
- * Blockquotes
+ * Blockquoteses
  */
-blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
-    padding-left: $spacing-unit / 2;
-    font-size: 18px;
+blockquote 
+{
+    color: rgba($text-color, 0.51);
+    // border-left: 4px solid $grey-color-light;
+    
+    background: -webkit-linear-gradient(    left, rgba($text-color, 0.1) 0%, rgba($text-color, 0.1) 6%, rgba($text-color, 0) 18%); // Chrome10+, Safari5.1+
+    background:    -moz-linear-gradient(    left, rgba($text-color, 0.1) 0%, rgba($text-color, 0.1) 6%, rgba($text-color, 0) 18%); // FF3.6+
+    background:     -ms-linear-gradient(    left, rgba($text-color, 0.1) 0%, rgba($text-color, 0.1) 6%, rgba($text-color, 0) 18%); // IE10+
+    background:      -o-linear-gradient(    left, rgba($text-color, 0.1) 0%, rgba($text-color, 0.1) 6%, rgba($text-color, 0) 18%); // Opera 11.10+
+    background:         linear-gradient(to right, rgba($text-color, 0.1) 0%, rgba($text-color, 0.1) 6%, rgba($text-color, 0) 18%); // Standard
+    filter    : progid:DXImageTransform.Microsoft.gradient(startColorstr='#80ffffff', endColorstr='#00ffffff', GradientType=1); // IE6-9
+    
+    padding-left: 4px + $spacing-unit / 2;
+    font-size: $base-font-size + 2;
     letter-spacing: -1px;
     font-style: italic;
-
-    > :last-child {
+    
+    > :last-child 
+    {
         margin-bottom: 0;
     }
 }
@@ -126,23 +149,29 @@ blockquote {
  * Code formatting
  */
 pre,
-code {
-    font-size: 15px;
-    border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #eef;
+code
+{
+    font-size: $base-font-size - 1;
+    // border: 1px solid $grey-color-light;
+    // border-radius: 3px;
+    // background-color: #eef;
+    @include spell-box($text-color, 0.9);
 }
 
-code {
+code 
+{
     padding: 1px 5px;
 }
 
-pre {
-    padding: 8px 12px;
+pre 
+{
+    padding: 4px 6px;
     overflow-x: scroll;
-
-    > code {
-        border: 0;
+    
+    > code 
+    {
+        border: none;
+        box-shadow: none;
         padding-right: 0;
         padding-left: 0;
     }
@@ -153,7 +182,8 @@ pre {
 /**
  * Wrapper
  */
-.wrapper {
+.wrapper 
+{
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
     max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
@@ -161,8 +191,9 @@ pre {
     padding-right: $spacing-unit;
     padding-left: $spacing-unit;
     @extend %clearfix;
-
-    @include media-query($on-laptop) {
+    
+    @include media-query($on-laptop) 
+    {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
@@ -170,14 +201,20 @@ pre {
     }
 }
 
+main.page-content .wrapper
+{
+    background-color: $content-bg-color;
+}
 
 
 /**
  * Clearfix
  */
-%clearfix {
-
-    &:after {
+%clearfix 
+{
+    
+    &:after 
+    {
         content: "";
         display: table;
         clear: both;
@@ -188,17 +225,21 @@ pre {
 
 /**
  * Icons
- */
-.icon {
-
-    > svg {
+ *
+.icon 
+{
+    
+    > svg 
+    {
         display: inline-block;
         width: 16px;
         height: 16px;
         vertical-align: middle;
-
-        path {
+        
+        path
+        {
             fill: $grey-color;
         }
     }
 }
+*/
