--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,158 +1,205 @@
 /**
  * Site header
  */
-.site-header {
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+.site-header 
+{
+    // border-top: 5px solid $grey-color-dark;
+    // border-bottom: 1px solid rgba($nav-color, 0.5);
+        
     min-height: 56px;
-
+    
     // Positioning context for the mobile navigation icon
     position: relative;
+    
+    // opacity: $nav-opacity;
+    a:not[disabled]
+    {
+        &:hover, &:focus, &:active
+        {
+            opacity: 1;
+        }
+    }
 }
 
-.site-title {
-    font-size: 26px;
+.site-title
+{
+    font-size: $font-size-h2;
+    font-family: $font-stack-arcane-top;
     line-height: 56px;
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+    
+    // &,
+    // &:visited 
+    // {
+    //     color: $grey-color-dark;
+    // }
 }
 
-.site-nav {
+.site-nav 
+{
     float: right;
     line-height: 56px;
-
-    .menu-icon {
+    
+    .menu-icon 
+    {
         display: none;
     }
-
-    .page-link {
-        color: $text-color;
+    
+    .page-link 
+    {
+        // color: $nav-color;
         line-height: $base-line-height;
-
+        
+        font-size: $font-size-h4;
+        font-family: $font-stack-arcane-mid;
+        
         // Gaps between nav items, but not on the first one
-        &:not(:first-child) {
+        &:not(:first-child) 
+        {
             margin-left: 20px;
         }
     }
-
-    @include media-query($on-palm) {
+    
+    @include media-query($on-palm)
+    {
         position: absolute;
         top: 9px;
         right: 30px;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
-        border-radius: 5px;
+        // background-color: $background-color;
+        // border: 1px solid $grey-color-light;
+        // border-radius: 5px;
         text-align: right;
-
-        .menu-icon {
+        
+        padding-top: 10px;
+        
+        .menu-icon
+        {
+            border-radius: 5px;
+            
             display: block;
             float: right;
             width: 36px;
             height: 26px;
             line-height: 0;
-            padding-top: 10px;
             text-align: center;
-
-            > svg {
-                width: 18px;
-                height: 15px;
-
-                path {
-                    fill: $grey-color-dark;
-                }
-            }
+            
+            font-size: 18px;
         }
-
-        .trigger {
+        
+        .trigger 
+        {
             clear: both;
             display: none;
         }
-
-        &:hover .trigger {
+        
+        &:hover .trigger 
+        {
             display: block;
             padding-bottom: 5px;
         }
-
-        .page-link {
+        
+        .page-link 
+        {
             display: block;
             padding: 5px 10px;
+            z-index: 50;
         }
     }
 }
 
-
+hr
+{
+    opacity: 0.75;
+}
 
 /**
  * Site footer
  */
-.site-footer {
-    border-top: 1px solid $grey-color-light;
+.site-footer 
+{
+    // border-top: 1px solid rgba($nav-color, 0.5 * $nav-opacity);
     padding: $spacing-unit 0;
 }
 
-.footer-heading {
+.footer-heading 
+{
     font-size: 18px;
     margin-bottom: $spacing-unit / 2;
 }
 
 .contact-list,
-.social-media-list {
+.social-media-list 
+{
     list-style: none;
     margin-left: 0;
 }
 
-.footer-col-wrapper {
-    font-size: 15px;
-    color: $grey-color;
+.footer-col-wrapper 
+{
+    font-size: $base-font-size - 1;
+    color: rgba($text-color, 0.51);
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
 }
 
-.footer-col {
+.footer-col 
+{
     float: left;
     margin-bottom: $spacing-unit / 2;
     padding-left: $spacing-unit / 2;
 }
 
-.footer-col-1 {
-    width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-    width:         calc(35% - (#{$spacing-unit} / 2));
+.footer-col-1 
+{
+    width: -webkit-calc(33.3% - (#{$spacing-unit} / 2));
+    width:         calc(33.3% - (#{$spacing-unit} / 2));
 }
 
-.footer-col-2 {
-    width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-    width:         calc(20% - (#{$spacing-unit} / 2));
+.footer-col-2 
+{
+    width: -webkit-calc(33.3% - (#{$spacing-unit} / 2));
+    width:         calc(33.3% - (#{$spacing-unit} / 2));
 }
 
-.footer-col-3 {
-    width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-    width:         calc(45% - (#{$spacing-unit} / 2));
+.footer-col-3 
+{
+    width: -webkit-calc(33.3% - (#{$spacing-unit} / 2));
+    width:         calc(33.3% - (#{$spacing-unit} / 2));
 }
 
-@include media-query($on-laptop) {
-    .footer-col-1,
-    .footer-col-2 {
-        width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-        width:         calc(50% - (#{$spacing-unit} / 2));
-    }
-
-    .footer-col-3 {
-        width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-        width:         calc(100% - (#{$spacing-unit} / 2));
-    }
+// fancy left-justified centering
+.shuck
+{
+    display: inline-block;
+    position: relative;
+    left: 50%;
+}
+.shuck > .jive
+{
+    display: inline-block;
+    position: relative;
+    left: -50%;
 }
 
-@include media-query($on-palm) {
-    .footer-col {
+@include media-query($on-palm) 
+{
+    .footer-col 
+    {
         float: none;
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
+    }
+    
+    .footer-col + .footer-col
+    {
+        margin-top: 1em;
+    }
+    
+    .shuck, .shuck > .jive
+    {
+        display: initial;
     }
 }
 
@@ -161,29 +208,35 @@
 /**
  * Page content
  */
-.page-content {
+.page-content 
+{
     padding: $spacing-unit 0;
 }
 
-.page-heading {
+.page-heading 
+{
     font-size: 20px;
 }
 
-.post-list {
+.post-list 
+{
     margin-left: 0;
     list-style: none;
-
-    > li {
+    
+    > li 
+    {
         margin-bottom: $spacing-unit;
     }
 }
 
-.post-meta {
+.post-meta 
+{
     font-size: $small-font-size;
-    color: $grey-color;
+    color: rgba($text-color, 0.51);
 }
 
-.post-link {
+.post-link 
+{
     display: block;
     font-size: 24px;
 }
@@ -193,44 +246,54 @@
 /**
  * Posts
  */
-.post-header {
+.post-header 
+{
     margin-bottom: $spacing-unit;
 }
 
-.post-title {
-    font-size: 42px;
+.post-title 
+{
+    // font-size: $font-size-h1;
     letter-spacing: -1px;
     line-height: 1;
-
-    @include media-query($on-laptop) {
-        font-size: 36px;
+    
+    @include media-query($on-laptop) 
+    {
+        font-size: $font-size-h1 - 4;
     }
 }
 
-.post-content {
+.post-content 
+{
     margin-bottom: $spacing-unit;
-
-    h2 {
-        font-size: 32px;
-
-        @include media-query($on-laptop) {
-            font-size: 28px;
+    
+    @include media-query($on-laptop)
+    {
+        font-size: $base-font-size - 2;
+        
+        h2 
+        {
+            font-size: $font-size-h2 - 4;
+        }
+        h3 
+        {
+            font-size: $font-size-h3 - 4;
+        }
+        h4
+        {
+            font-size: $font-size-h4 - 2;
+        }
+        h5
+        {
+            font-size: $font-size-h5 - 2;
+        }h6
+        {
+            font-size: $font-size-h6 - 2;
         }
     }
+}
 
-    h3 {
-        font-size: 26px;
-
-        @include media-query($on-laptop) {
-            font-size: 22px;
-        }
-    }
-
-    h4 {
-        font-size: 20px;
-
-        @include media-query($on-laptop) {
-            font-size: 18px;
-        }
-    }
+span.egg:hover
+{
+    text-decoration-style: dotted;
 }
