--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -10,8 +10,10 @@
     <!-- <hr> -->
     
     <main class="page-content">
-      <div class="wrapper portal flavor-blue">
-        {{ content }}
+      <div class="wrapper resume">
+        <article>
+          {{ content }}
+        </article>
       </div>
     </main>
     
