--- a/_sass/arcane/_mixins.scss
+++ b/_sass/arcane/_mixins.scss
@@ -15,12 +15,31 @@
 //     }
 // }
 
+@mixin list-style-none()
+{
+    padding-left: 0;
+    
+    > li::before
+    {
+        content: "";
+        
+        position: static;  // freaking IE
+        position: initial;
+        display: inline;   // freaking IE
+        display: initial;
+        right: auto;       // freaking IE
+        right: initial;
+        width: auto;       // freaking IE
+        width: initial;
+    }
+}
+
 @mixin text-shadow-uniform()
 {
     
 }
 
-@mixin spell-box($color, $border-width:1px, $border-radius:2px, $border-style:solid, $opacity:1)
+@mixin spell-box($color:$container-color, $border-width:1px, $border-radius:2px, $border-style:solid, $opacity:1)
 {
     background: none;
     border: $border-width $border-style rgba($color, $opacity);
