Done as it'll get.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,14 @@
       </a>
 
       <div class="trigger">
+        <a class="page-link" href="https://github.com/{{ site.github_username }}">
+          <i class="fa fa-github"></i>
+          <span class="username">GitHub</span>
+        </a>
+        <a class="page-link" href="{{ site.linkedin }}">
+          <i class="fa fa-linkedin-square"></i>
+          <span class="username">LinkedIn</span>
+        </a>
         <a class="page-link" href="/resume">
           <span class="fa-stack resume-icon">
             <i class="fa fa-file-o fa-stack-2x"></i>
