--- a/_sass/arcane/_components.scss
+++ b/_sass/arcane/_components.scss
@@ -33,7 +33,7 @@ body
     margin-top:     1em;
     margin-bottom:  0.5em;
     
-    &:first-child
+    @at-root *:not(a) > &:first-child
     {
         margin-top: 0.25em;
     }
