--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -192,12 +192,26 @@ pre
     padding-left: $spacing-unit;
     @extend %clearfix;
     
+    &.resume
+    {
+        max-width: $resume-width;
+        min-width: $resume-width;
+        padding: 0;
+    }
+    
     @include media-query($on-laptop) 
     {
         max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
         max-width:         calc(#{$content-width} - (#{$spacing-unit}));
         padding-right: $spacing-unit / 2;
         padding-left: $spacing-unit / 2;
+        
+        &.resume
+        {
+            max-width: $resume-width;
+            min-width: $resume-width;
+            padding: 0;
+        }
     }
 }
 
