--- a/css/main.scss
+++ b/css/main.scss
@@ -44,6 +44,8 @@ $content-width:    1000px;
 $on-laptop:        800px;
 $on-palm:          600px;
 
+$resume-width:     850px;
+
 
 // Using media queries with like this:
 // @include media-query($on-palm)
