Resume markup and CSS are decent and respectable.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -12,7 +12,7 @@
     position: relative;
     
     // opacity: $nav-opacity;
-    a:not[disabled]
+    a:not([disabled])
     {
         &:hover, &:focus, &:active
         {
