--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,6 @@
 @charset "utf-8";
 
 
-// Apparently Jekyll's SASS doesn't have these functions...
 // Add percentage of white to a color
 @function tint($color, $percent)
 {
@@ -15,6 +14,7 @@
 // {
 //     @return mix(black, $color, $percent);
 // }
+
 
 // RADISH
 $font-size-base: 16px;
@@ -28,6 +28,8 @@ $small-font-size:  $base-font-size * 0.875;
 $base-line-height: $line-height-computed;
 
 $spacing-unit:     15px;
+
+$folio-spacing:    30px;
 
 // $text-color:       #111;
 $background-color: black;
@@ -71,7 +73,7 @@ $resume-width:     850px;
         "syntax-highlighting"
 ;
 
-// RADISH: the rest of Arcane css
+// RADISH: Import the rest of Arcane sass
 @import "arcane/helpers";
 
 @import "arcane/reset";
@@ -79,3 +81,131 @@ $resume-width:     850px;
 
 @import "arcane/components";
 @import "arcane/flavors";
+
+
+// APP-SPECIFIC
+
+span.egg:hover
+{
+    text-decoration-style: dotted;
+}
+
+.resume-icon
+{
+    font-size: 0.75em;
+}
+
+img.screenshot
+{
+    width: 66.7%;
+    // display: block;
+    // margin: 0.5em auto;
+    
+    // @include spell-box($container-color);
+    // @include glow-mild-border($container-color);
+}
+
+/* .grid-box
+{
+    margin: 0 -($spacing-unit/2);
+    @include clearfix();
+}
+#folio-index > .post-content > .grid-box
+{
+    margin: 0 -($folio-spacing/2);
+} */
+
+.folio-card
+{
+    text-align: center;
+    
+    /* float: left;
+    width: 50%;
+    
+    padding: $folio-spacing / 2;
+    
+    img.screenshot
+    {
+        width: 100%;
+    } */
+    @include clearfix();
+}
+
+.folio-link-col
+{
+    float: left;
+    width: 33.33333333%;
+    
+    img.screenshot
+    {
+        width: 100%;
+    }
+}
+.folio-brief-col
+{
+    float: left;
+    width: 66.66666667%;
+    
+    .brief
+    {
+        margin-top: $font-size-h4;
+    }
+}
+.item-link-col
+{
+    text-align: center;
+    
+    display: inline-block;
+    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
+    width:         calc(50% - (#{$spacing-unit} / 2));
+}
+
+.team-project
+{
+    font-weight: bold;
+}
+
+// fancy left-justified centering
+.shuck
+{
+    display: inline-block;
+    position: relative;
+    left: 50%;
+    
+    white-space: nowrap; // Chrome is inexplicably compelled to put icon and text on separate lines without this
+}
+.shuck > .jive
+{
+    display: inline-block;
+    position: relative;
+    left: -50%;
+}
+
+.dog-earred
+{
+    background: linear-gradient(45deg, #F8F8F8 0%, #F8F8F8 90%, transparent 90%, transparent 100%);
+    width: 850px;
+    height: 1100px;
+    position: relative;
+    
+    /* typography */
+    // padding: 10px 0 10px 10px;
+    color: #080808;
+    
+    overflow: hidden;
+    
+    &::after
+    {
+        content: '';
+        display: inline-block;
+        width: 23px;
+        height: 23px;
+        right: 0;
+        top: 0;
+        position: absolute;
+        background: linear-gradient(45deg, #E8E8E8 0%, #E0E0E0 50%, transparent 50%, transparent 100%);
+        box-shadow: -2px 2px 4px 0px rgba(0,0,0,0.2);
+        border-left: 1px solid rgba(0,0,0,0.2);
+        border-bottom: 1px solid rgba(0,0,0,0.2);
+    }
+}
