--- a/_sass/arcane/_fix.scss
+++ b/_sass/arcane/_fix.scss
@@ -71,3 +71,14 @@ sup
 {
     top: -0.5em;
 }
+
+.clearfix::before,
+.clearfix::after
+{
+    content: " ";
+    display: table;
+}
+.clearfix::after
+{
+    clear: both;
+}
