--- a/_sass/arcane/_mixins.scss
+++ b/_sass/arcane/_mixins.scss
@@ -15,6 +15,20 @@
 //     }
 // }
 
+@mixin clearfix()
+{
+    &::before,
+    &::after
+    {
+        content: " ";
+        display: table;
+    }
+    &::after
+    {
+        clear: both;
+    }
+}
+
 @mixin list-style-none()
 {
     padding-left: 0;
