Fixed chrome hover animations not synchronizing.
And other stuff I've forgotten.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <a class="site-title" href="{{ site.baseurl }}/">{{ site.author }}</a>
 
     <nav class="site-nav">
-      <a href="#" class="menu-icon button flavor-nav">
+      <a href="#" class="menu-icon button school-nav">
         <i class="fa fa-bars"></i>
       </a>
 
