--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <!-- <hr> -->
     
     <main class="page-content">
-      <div class="wrapper portal flavor-blue">
+      <div class="wrapper portal school-blue">
         {{ content }}
       </div>
     </main>
