--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,5 +18,6 @@
   <!-- <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" /> -->
   
   <script type="text/javascript" src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script type="text/javascript" src="{{ site.baseurl }}/js/arcane.js"></script>
   <script type="text/javascript" src="{{ site.baseurl }}/js/script.js"></script>
 </head>
