--- a/_sass/arcane/_components.scss
+++ b/_sass/arcane/_components.scss
@@ -2,17 +2,17 @@
 // ©LOL copyright
 
 // Animate EVERYTHING, MWAHAHAHAAA
-*, *::before, *::after
-{
-    transition: transform   $transition-duration,
-                color       $transition-duration,
-                opacity     $transition-duration,
-                border      $transition-duration,
-                text-shadow $transition-duration,
-                box-shadow  $transition-duration;
-}
+//*, *::before, *::after
+//{
+//    transition: transform   $transition-duration,
+//                color       $transition-duration,
+//                opacity     $transition-duration,
+//                border      $transition-duration,
+//                text-shadow $transition-duration,
+//                box-shadow  $transition-duration;
+//}
 
-body
+body, #arcane, .arcane
 {
     background-color: black;
     
@@ -21,8 +21,6 @@ body
     font-family: $font-family-bottom-level;
     font-size:   $font-size-base;
     line-height: $line-height-computed;
-    
-    width: 100%;
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6
@@ -41,14 +39,10 @@ body
 .h1, .h2, .h3, h1, h2, h3
 {
     font-family: $font-family-top-level;
-    // margin-top: 16px;
-    // margin-bottom: 8px;
 }
 .h4, .h5, .h6, h4, h5, h6
 {
     font-family: $font-family-mid-level;
-    // margin-top: 12px;
-    // margin-bottom: 6px;
 }
 .h1, h1
 {
@@ -64,36 +58,79 @@ body
 }
 .h4, h4
 {
-    //font-size: $font-size-h4 + 2; // hack for smaller-ness of Port Lligat font
     font-size: $font-size-h4;
 }
 .h5, h5
 {
-    //font-size: $font-size-h5 + 2; // hack for smaller-ness of Port Lligat font
     font-size: $font-size-h5;
     //font-weight: 600;
 }
 .h6, h6
 {
-    //font-size: $font-size-h6 + 2; // hack for smaller-ness of Port Lligat font
     font-size: $font-size-h6;
     //font-weight: 700;
 }
 
-p
+p, blockquote
 {
     margin: 0.5em 0;
+    
+    &:first-child
+    {
+        margin-top: 0;
+    }
+    &:last-child
+    {
+        margin-bottom: 0;
+    }
 }
-// p:first-child,
-// h1 + p, h2 + p, h3 + p, h4 + p, h5 + p, h6 + p,
-// .h1 + p,.h2 + p,.h3 + p,.h4 + p,.h5 + p,.h6 + p
-p:first-child
+
+blockquote
 {
-    margin-top: 0;
-}
-p:last-child
-{
-    margin-bottom: 0;
+    padding-left: 1.75em;
+    font-size: calc(1em + 2px);
+    font-style: italic;
+    letter-spacing: -1px;
+    
+    position: relative;
+    
+    &::before
+    {
+        content: "“";
+                
+        font-family: Georgia, serif;
+        font-size: 3em;
+        font-style: normal;
+        //transform: scale(3.0);
+        opacity: 0.6;
+    
+        line-height: 0;
+        
+        display: inline-block;
+        width: 0.5833333333333333em;
+        height: 100%;
+        background: linear-gradient(to right, rgba($text-color, 0.5) 0%, rgba($text-color, 0) 100%);
+        
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding-left: 0.04em;
+        padding-top: 0.5208333333333333em;
+    }
+    
+    cite
+    {
+        display: block;
+        font-size: calc(1em - 2px);
+        font-style: normal;
+        letter-spacing: 0;
+        font-weight: bold;
+        
+        &::before
+        {
+            content: "―";
+        }
+    }
 }
 
 hr
@@ -106,16 +143,8 @@ hr
     margin: 1em auto;
 }
 
-b, strong
-{
-    font-weight: bold;
-}
-i, em
-{
-    font-style: italic;
-}
-
-ul
+//ul:not(.list-style-none)
+ul.bullae
 {
     padding-left: 1em;
     
@@ -124,52 +153,77 @@ ul
         content: "•";
         
         position: relative;
-        display: inline-block;
         right: 1em;
+        
+        display: inline-block;
         width: 0;
     }
 }
 
-a:not(.button)
+a
+{
+    @include transition-anim-psuedo();
+}
+
+a:not(.boton)
 {
     @include glow-idle-text($link-color);
     text-decoration: none;
     
     position: relative;
     
+    &.box
+    {
+        @include spell-box($link-color);
+        @include glow-idle-text($link-color);
+    }
+    
     &:hover, &:focus
     {
         @include glow-mild-text($link-color);
-    }
-    
-    &::after
-    {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
         
-        @include spell-box($link-color);
-        
-        opacity: 0;
-    }
-    &:focus:not(:active)::after
-    {
-        content: "";
-        
-        @include glow-mild-border($link-color);
-        
-        opacity: 1;
+        &.box
+        {
+            @include glow-mild-border($link-color);
+        }
     }
     
     &:active
     {
         @include glow-strong-text($link-color);
+    
+        &.box
+        {
+            @include glow-strong-border($link-color);
+        }
+    }
+    
+    &:not(.box)
+    {
+        &::after
+        {
+            content: "";
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            
+            @include spell-box($link-color);
+            
+            opacity: 0;
+        }
+        &:focus:not(:active)::after
+        {
+            content: "";
+            
+            @include glow-mild-border($link-color);
+            
+            opacity: 1;
+        }
     }
 }
 
-a > img
+a:not(.boton):not(.box) > img
 {
     @include spell-box($link-color);
     
@@ -187,26 +241,26 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"],
-.button
+.boton
 {
-    @include spell-box($bttn-color, 2px, 4px);
+    @include transition-anim();
     
+    @include glow-idle-text($bttn-color);
+    @include spell-box($bttn-color, 2px, 4px);
     padding: 3px 6px;
     
-    span, i
+    > .power-words
     {
-        @include glow-idle-text($bttn-color);
+        @include transition-anim();
+        
         display: inline-block;
-        //transition: all 0.25s;
-    }
-    span
-    {
         font-family: $font-stack-arcane-mid;
     }
     
     &[disabled]
     {
-        span, i
+        //span, i, label, p
+        > .power-words
         {
             opacity: 0.6
         }
@@ -215,17 +269,20 @@ input[type="submit"],
     {
         &:not([disabled])
         {
+            @include glow-mild-text($bttn-color);
             @include glow-mild-border($bttn-color);
             
-            span, i
+            //span, i, label, p
+            > .power-words
             {
-                @include glow-mild-text($bttn-color);
+                //@include glow-mild-text($bttn-color);
                 transform: scale(1.15, 1.15);
             }
         }
         &[disabled]
         {
-            span, i
+            //span, i, label, p
+            > .power-words
             {
                 opacity: 0.3;
                 transform: scale(0.8, 0.8);
@@ -233,24 +290,27 @@ input[type="submit"],
         }
     }
     
-    &:active
+    &:active:not([disabled])
     {
+        @include glow-strong-text($bttn-color);
         @include glow-strong-border($bttn-color);
-        
+    
         padding: 3px 6px; // probably only necessary because of something bootstrap's doing...?
-        
-        span, i
+    
+        //span, i, label, p
+        > .power-words
         {
-            @include glow-strong-text($bttn-color);
             transform: scale(1.25, 1.25);
         }
     }
     
-    &.selected
+    &.selected:not([disabled])
     {
-        span, i
+        @include glow-strong-text($bttn-color);
+        
+        //span, i, label, p
+        > .power-words
         {
-            @include glow-strong-text($bttn-color);
             transform: scale(1.25, 1.25);
         }
     }
@@ -258,6 +318,8 @@ input[type="submit"],
 
 form label
 {
+    @include transition-anim();
+    
     @include glow-idle-text($form-color, $form-opacity);
 }
 form label.label-focus
@@ -266,11 +328,14 @@ form label.label-focus
 }
 
 // http://www.w3schools.com/html/html_form_input_types.asp
-// Typing-based input fields
+// Text-based input fields
 textarea,
+select,
 input:not([type="submit"]):not([type="reset"]):not([type="radio"]):not([type="checkbox"]):not([type="button"]):not([type="color"]):not([type="range"]) //, :not([type="number"]),
 // div.input-type-number
 {
+    @include transition-anim();
+    
     @include glow-idle-text($form-color, $form-opacity);
     @include spell-box($form-color, $opacity:$form-opacity);
     
@@ -299,10 +364,16 @@ input:not([type="submit"]):not([type="reset"]):not([type="radio"]):not([type="ch
         @include glow-mild-border($text-color);
     }
 }
+select, option
+{
+    background: none;
+}
 
 // Content container with inward-moving rings at the border to look like a portal
 .portal
 {
+    @include transition-anim-psuedo();
+    
     background: $portal-bg-properties;
 }
 .portal, .portal::before, .portal::after
@@ -403,7 +474,7 @@ fieldset.input-type-number
         // top: 5px;
         // left: -20px;
     }
-    button.spin, .spin.button
+    button.spin, .spin.boton
     {
         border: none;
         @include glow-idle-text($form-color);
