--- a/_sass/arcane/_reset.scss
+++ b/_sass/arcane/_reset.scss
@@ -4,11 +4,11 @@
 */
 
 html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+h1, h2, h3, h4, h5, h6, p, blockquote,
 a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
+del, dfn, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var,
+u, center,
 dl, dt, dd, /* ol, */ ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
@@ -39,12 +39,12 @@ ul
 {
 	list-style: none;
 }
-blockquote, q
+blockquote//, q
 {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after
+blockquote:before, blockquote:after//,
+//q:before, q:after
 {
 	content: '';
 	content: none;
