--- a/_sass/arcane/_schools.scss
+++ b/_sass/arcane/_schools.scss
@@ -1,35 +1,39 @@
 
 // Color variants for most components
-$flavors:
+$schools:
 (
-    flavor-white  : white,
-    flavor-blue   : $blue,
-    flavor-green  : green,
-    flavor-orange : #FF9933,
-    flavor-danger : $danger-color,
-    flavor-nav    : $nav-color
+    school-white  : white,
+    school-blue   : $blue,
+    school-green  : green,
+    school-orange : #FF9933,
+    school-danger : $danger-color,
+    school-nav    : $nav-color
 );
 
 // Color variants for alert messages
-$alert-flavors:
+$alert-schools:
 (
-    flavor-alert-warn  : $danger-color,
-    flavor-alert-error : $error-color
+    school-alert-warn  : $danger-color,
+    school-alert-error : $error-color
 );
 
-@mixin define-flavor($color, $flavor-name:null)
+@mixin define-school($color, $school-name:null)
 {
-    // $flavor-name: str-slice(#{&}, 2); // store value of & without dot for portal animation name
+    // $school-name: str-slice(#{&}, 2); // store value of & without dot for portal animation name
+    @include glow-idle-text($color);
     
     @at-root button#{&},
     input[type="button"]#{&},
     input[type="reset"]#{&},
     input[type="submit"]#{&},
-    .button#{&}
+    .boton#{&}
     {
+        @include glow-idle-text($color);
+        
         @include spell-box($color, 2px, 4px);
         
-        span, i
+        //span, i, label, p
+        > .power-words
         {
             @include glow-idle-text($color);
         }
@@ -39,34 +43,23 @@ $alert-flavors:
             &:not([disabled])
             {
                 @include glow-mild-border($color);
-                
-                span, i
-                {
-                    @include glow-mild-text($color);
-                }
+                @include glow-mild-text($color);
             }
         }
         
-        &:active
+        &:active:not([disabled])
         {
+            @include glow-strong-text($color);
             @include glow-strong-border($color);
-            
-            span, i
-            {
-                @include glow-strong-text($color);
-            }
         }
         
-        &.selected
+        &.selected:not([disabled])
         {
-            span, i
-            {
-                @include glow-strong-text($color);
-            }
+            @include glow-strong-text($color);
         }
     }
     
-    @at-root hr#{&}, & hr
+    @at-root hr#{&}, & > hr
     {
         @include spell-box($color);
         @include glow-mild-border($color);
@@ -78,8 +71,26 @@ $alert-flavors:
         
         @include glow-idle-text($color);
     }
+    @at-root a.box#{&}
+    {
+        @include spell-box($color);
     
-    @if ($flavor-name) // can't create portal animation without a flavor-name
+        @include glow-idle-text($color);
+        
+        &:hover, &:focus
+        {
+            @include glow-mild-text($color);
+            @include glow-mild-border($color);
+        }
+    
+        &:active
+        {
+            @include glow-strong-text($color);
+            @include glow-strong-border($color);
+        }
+    }
+    
+    @if ($school-name) // can't create portal animation without a school-name
     {
         &.portal, &.portal::before, &.portal::after
         {
@@ -93,10 +104,10 @@ $alert-flavors:
         }
         &.portal::before, &.portal::after
         {
-            animation-name : portal-ring-loop-#{$flavor-name};
+            animation-name : portal-ring-loop-#{$school-name};
         }
         
-        @keyframes portal-ring-loop-#{$flavor-name}
+        @keyframes portal-ring-loop-#{$school-name}
         {
             0%
             {
@@ -134,7 +145,7 @@ $alert-flavors:
         }
     }
 }
-@mixin define-alert-flavor($color)
+@mixin define-alert-school($color)
 {
     &.box
     {
@@ -148,16 +159,9 @@ $alert-flavors:
     }
 }
 
-// .flavor-white  { @include define-flavor(white); }
-// .flavor-blue   { @include define-flavor($blue); }
-// .flavor-green  { @include define-flavor(green); }
-// .flavor-danger { @include define-flavor($danger-color); }
 
-// .flavor-alert-warn  { @include define-alert-flavor($danger-color); }
-// .flavor-alert-error { @include define-alert-flavor($error-color); }
-
-// Loop through maps making flavors
-@each $flavor, $color in $flavors
+// Loop through school maps defining schools
+@each $school, $color in $schools
 {   
     // @if type-of($color) == list   // color and opacity specified
     // {
@@ -169,10 +173,10 @@ $alert-flavors:
     //     $opacity: 1;
     // }
     // 
-    // .#{$flavor} { @include define-flavor($color, $opacity, $flavor); }
-    .#{$flavor} { @include define-flavor($color, $flavor); }
+    // .#{$school} { @include define-school($color, $opacity, $school); }
+    .#{$school} { @include define-school($color, $school); }
 }
-@each $flavor, $color in $alert-flavors
+@each $school, $color in $alert-schools
 {
-    .#{$flavor} { @include define-alert-flavor($color); }
+    .#{$school} { @include define-alert-school($color); }
 }
