Web resume now has link to pdf version.

--- a/_sass/_resume_vars.scss
+++ b/_sass/_resume_vars.scss
@@ -8,6 +8,7 @@ $page-width     : 850px;
 $page-height    : 1100px;
 $page-width-a4  : 827px;
 $page-height-a4 : 1168px;
+$page-margin    : 35px;
 $page-gap       : 50px;
 
 $color-primary  : #03305A;
