--- a/_sass/arcane/_variables.scss
+++ b/_sass/arcane/_variables.scss
@@ -113,3 +113,6 @@ $portal-bg-properties       : black;
 $box-padding                : 6px;
 
 $transition-duration        : 0.25s;
+$transition-duration-tabs   : 0.3s;
+
+$p-margin                   : 0.65em;
