--- a/_sass/arcane/arcane.scss
+++ b/_sass/arcane/arcane.scss
@@ -1,5 +1,4 @@
-// Kyle Fiegener
-// ©LOL copyright
+/* © Kyle Fiegener */
 
 @import "base";
 @import "helpers";
@@ -9,3 +8,4 @@
 
 @import "components";
 @import "schools";
+
