--- a/_sass/arcane/_components.scss
+++ b/_sass/arcane/_components.scss
@@ -35,6 +35,15 @@ body, #arcane, .arcane
     {
         margin-top: 0.25em;
     }
+    @at-root header > &
+    {
+        margin-top: 0.25em;
+        
+        &:not(:last-child)
+        {
+            margin-bottom: 0;
+        }
+    }
 }
 .h1, .h2, .h3, h1, h2, h3
 {
@@ -73,16 +82,26 @@ body, #arcane, .arcane
 
 p, blockquote
 {
-    margin: 0.5em 0;
+    margin: $p-margin 0;
     
-    &:first-child
+    &:first-child, &.fyrst
     {
         margin-top: 0;
     }
-    &:last-child
+    &:last-child, &.laetest
     {
         margin-bottom: 0;
     }
+}
+
+figure
+{
+    margin-bottom: $p-margin;
+    
+    /* &:last-child, &.laetest
+    {
+        margin-bottom: 0;
+    } */
 }
 
 blockquote
@@ -133,17 +152,24 @@ blockquote
     }
 }
 
+figcaption
+{
+    font-size: $scale-small;
+    line-height: 1.1;
+}
+
 hr
 {
     width: 85%;
         
     @include spell-box($text-color);
     @include glow-mild-border($text-color);
+    transform: scaleY(0.5);
     
     margin: 1em auto;
 }
 
-//ul:not(.list-style-none)
+// Bulleted list
 ul.bullae
 {
     padding-left: 1em;
@@ -158,6 +184,44 @@ ul.bullae
         display: inline-block;
         width: 0;
     }
+}
+
+ul.inline-spread, ol.inline-spread
+{
+    @include clearfix();
+    
+    > li
+    {
+        margin-left: 0;
+        margin-right: 0;
+        
+        float: left;
+        
+        &:first-child
+        {
+            text-align: left;
+        }
+        &:last-child
+        {
+            text-align: right;
+        }
+        &:not(:first-child):not(:last-child)
+        {
+            text-align: center;
+        }
+    }
+}
+
+/* For spans with on-hover easter-egg text. */
+span.egg
+{
+    @include glow-idle-text(mix($text-color, $link-color, 88%));
+    cursor: default;
+}
+span.egg:hover
+{
+    border-bottom: 1px dotted mix($text-color, $link-color, 88%);
+    margin-bottom: -1px;
 }
 
 a
@@ -251,8 +315,11 @@ input[type="submit"],
     @include transition-anim();
     
     @include glow-idle-text($bttn-color);
-    @include spell-box($bttn-color, 2px, 4px);
-    padding: 3px 6px;
+    &:not(.no-border)
+    {
+        @include spell-box($bttn-color, 2px, 4px);
+        padding: 3px 6px;
+    }
     
     > .power-words
     {
@@ -264,18 +331,22 @@ input[type="submit"],
     
     &[disabled]
     {
-        //span, i, label, p
-        > .power-words
-        {
-            opacity: 0.6
-        }
+        opacity: 0.6;
+        
+        // > .power-words
+        // {
+        //     opacity: 0.6
+        // }
     }
     &:hover, &:focus
     {
         &:not([disabled])
         {
             @include glow-mild-text($bttn-color);
-            @include glow-mild-border($bttn-color);
+            &:not(.no-border)
+            {
+                @include glow-mild-border($bttn-color);
+            }
             
             //span, i, label, p
             > .power-words
@@ -289,7 +360,8 @@ input[type="submit"],
             //span, i, label, p
             > .power-words
             {
-                opacity: 0.3;
+                opacity: 0.5;
+                // opacity: 0.3;
                 transform: scale(0.8, 0.8);
             }
         }
@@ -298,9 +370,10 @@ input[type="submit"],
     &:active:not([disabled])
     {
         @include glow-strong-text($bttn-color);
-        @include glow-strong-border($bttn-color);
-    
-        padding: 3px 6px; // probably only necessary because of something bootstrap's doing...?
+        &:not(.no-border)
+        {
+            @include glow-strong-border($bttn-color);
+        }
     
         //span, i, label, p
         > .power-words
@@ -316,7 +389,7 @@ input[type="submit"],
         //span, i, label, p
         > .power-words
         {
-            transform: scale(1.25, 1.25);
+            transform: scale(1.2, 1.2);
         }
     }
 }
@@ -374,6 +447,20 @@ select, option
     background: none;
 }
 
+.form-widget
+{
+    width: 100%;
+}
+
+// Very simple content container with matching text and border color – probably best for messages and the like.
+.box
+{
+    padding: $box-padding;
+    
+    @include spell-box($container-color);
+    @include glow-idle-text($container-color);
+}
+
 // Content container with inward-moving rings at the border to look like a portal
 .portal
 {
@@ -410,15 +497,6 @@ select, option
 .portal::before
 {
     animation-delay: -($portal-ring-loop-duration / 2);
-}
-
-// Very simple content container with matching text and border color – probably best for messages and the like.
-.box
-{
-    padding: $box-padding;
-    
-    @include spell-box($container-color);
-    @include glow-idle-text($container-color);
 }
 
 @keyframes portal-ring-loop
@@ -458,9 +536,113 @@ select, option
     }
 }
 
-.form-widget
+.arcane-tabs
 {
-    width: 100%;
+    margin-top: 0.5em;
+    
+    > .tab-list
+    {
+        // margin-bottom: 0.25em;
+        margin-bottom: ($box-padding * 2);
+        padding: 0 ($box-padding * 2);
+        
+        > li > a
+        {
+            // padding-bottom: 1em;
+            line-height: 1.375;  // 1.1 * 1.25
+        }
+    }
+    
+    > .tab-list.inline-spread > li:first-child > a > .power-words
+    {
+        transform-origin: left;
+    }
+    > .tab-list.inline-spread > li:last-child > a > .power-words
+    {
+        transform-origin: right;
+    }
+    
+    .bolt-blurred
+    {
+        stroke: $blue;
+    }
+    .fx
+    {
+        @include transition-anim($transition-duration-tabs);
+    }
+    
+    > .pannus
+    {
+        @include transition-anim-size($transition-duration-tabs);
+        
+        padding: ($box-padding * 2);
+        
+        @include spell-box($blue);
+        @include glow-idle-text(mix($blue, $text-color, 40%));
+        background-color: rgba($blue, 0);
+        
+        overflow: hidden;
+        position: relative;
+        
+        > .tab-content
+        {
+            @include transition-anim($transition-duration-tabs);
+            position: absolute;
+            top: ($box-padding * 2);
+            left: ($box-padding * 2);
+            width: calc(100% - #{$box-padding * 4});
+            
+            img
+            {
+                transition: box-shadow $transition-duration-tabs;
+            }
+            
+            &.selected // selected content to be shown
+            {
+                opacity: 1;
+            }
+            
+            &.switching // formerly selected content that's fading out
+            {
+                opacity: 0;
+                text-shadow: none;
+            }
+            
+            &:not(.selected):not(.switching) // completely undisplayed content
+            {
+                display: none;
+                
+                opacity: 0;
+                text-shadow: none;
+            }
+        }
+    }
+    > .pannus:not(.switching)
+    {
+        img
+        {
+            box-shadow: none;
+        }
+    }
+    > .pannus.switching
+    {
+        @include glow-strong-border($blue);
+        background-color: rgba($blue, 0.5);
+        
+        > .tab-content.selected
+        {
+            @include glow-strong-text(mix($blue, $text-color, 40%));
+            
+            img
+            {
+                @include glow-strong-border($blue);
+            }
+        }
+    }
+    > .pannus.no-tab-selected
+    {
+        opacity: 0.6;
+    }
 }
 
 /* Spin buttons via external DOM elements
