--- a/_layouts/folio_item.html
+++ b/_layouts/folio_item.html
@@ -7,6 +7,6 @@ layout: page
 <div class="item-link-col"><a class="h6" href="{{ page.demo_url }}"><i class="fa fa-external-link"></i> Live Demo</a></div>
 <div class="item-link-col"><a class="h6" href="{{ page.repo_url }}"><i class="fa fa-github"></i> GitHub Repository</a></div>
 
-<p>{{ page.brief }}</p>
+<p>{{ page.summary }}</p>
 
 {{ content }}
